# dino-spend-tracker

./: .env  PERFORMANCE.md  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.lovable/: plan.md
java-app/: README.md  pom.xml
java-app/Docker/: docker-compose.yml
java-app/analytics-service/: pom.xml
java-app/budget-service/: pom.xml
java-app/transaction-service/: pom.xml
java-app/user-service/: pom.xml
python-app/: README.md  pyproject.toml
python-app/app/: data_models.py  main.py  prompt.py
python-app/app/api/: llm.py  python_app.py
python-app/app/config/: config.py
python-app/app/domain/: data_models.py
python-app/app/resources/: application.yaml
python-app/app/services/llm/: factory.py  groq_provider.py  interface.py  ollama_provider.py
scaling_up/: README-backend.md  README-docs.md  README-frontend.md  adr.md  enterprise-evaluation.md  feature-backlog.md  high-level-design.md  low-level-design.md  monarch-comparison.md  overview-rework-ideas.md  requirements.md  use-cases.md
src/: App.tsx  config.ts  index.css  main.tsx  test-setup.ts
src/components/: theme-toggle.tsx
src/contexts/: AdminContext.tsx  AuthContext.tsx
src/hooks/: useCategories.ts  useCategoryGroups.ts  useMobile.ts  useStores.test.ts  useStores.ts  useTransactionFilters.test.ts  useTransactionFilters.ts  useTransactions.ts
src/lib/: transactionDedup.ts  validation.ts
src/pages/: Auth.tsx  Dashboard.tsx  Index.tsx
src/utils/: groupTrendsDataUtils.ts  trendsDataUtils.test.ts  trendsDataUtils.ts
supabase/: config.toml
supabase/migrations/: 20250611124857-870cbcd1-1d61-4387-b9be-4f2b4ccac52c.sql  (+10 more)
(+62 files in other folders)
