[project]
name = "python-app"
version = "0.1.0"
description = "app for connecting to llm"
authors = [
    { name = "Dino", email = "dino@email.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index-llms-ollama (>=0.9.1,<0.10.0)",
    "fastapi (>=0.127.0,<0.128.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "groq (>=1.0.0,<2.0.0)",
    "llama-index-llms-groq (>=0.4.1,<0.5.0)",
    "confluent-kafka (>=2.12.2,<3.0.0)",
    "dependency-injector (>=4.48.3,<5.0.0)",
    "pydantic (>=2.5.0,<3.0.0)",
    "pydantic-settings (>=2.1.0,<3.0.0)",
    "dependency-injector (>=4.41.0,<5.0.0)",
    "confluent-kafka (>=2.3.0,<3.0.0)",
    "asyncpg (>=0.29.0,<0.30.0)",
#    "llama-index (>=0.10.0,<0.11.0)",
    "pyyaml (>=6.0.1,<7.0.0)",
    "python-multipart (>=0.0.6,<0.0.7)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
